--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,20 @@
+absl-py==2.1.0
 asgiref==3.8.1
 certifi==2024.8.30
 charset-normalizer==3.4.0
 Django==5.1.2
 idna==3.10
+immutabledict==4.2.0
+numpy==2.1.2
+ortools==9.11.4210
+pandas==2.2.3
+protobuf==5.26.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+pytz==2024.2
 requests==2.32.3
+six==1.16.0
 sqlparse==0.5.1
 typing_extensions==4.12.2
+tzdata==2024.2
 urllib3==2.2.3
